# Phishing-kit-detector

./: README.md  cli.py  config.py  core.py  models.py  phising_detector.py
modules/: favicon.py
phishing_detector/: cli.py  config.py  core.py
phishing_detector/tests/: pyproject.toml
phishing_detector/utils/: __init__.py  logger.py  url_utils.py
phishing_detector/utils/modules/: dns_whois.py  scorer.py  ssl_checker.py
utils/: fetcher.py  html_analyzer.py  logger.py  scorer.py  ssl_checker.py
