[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "phishing-detector"
version     = "1.0.0"
description = "Modular phishing page analysis toolkit"
readme      = "README.md"
license     = { text = "MIT" }
authors     = [{ name = "LaxenT" }]
keywords    = ["phishing", "security", "osint", "cybersecurity", "pentest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-whois>=0.9.4",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
phishing-detector = "phishing_detector.cli:main"

[project.urls]
Homepage   = "https://github.com/LaxenTgit/phishing-detector"
Repository = "https://github.com/LaxenTgit/phishing-detector"
Issues     = "https://github.com/LaxenTgit/phishing-detector/issues"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length    = 100
src            = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "BLE"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.10"
strict                 = false
ignore_missing_imports = true
warn_unused_ignores    = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"

[tool.coverage.run]
source = ["src/phishing_detector"]
omit   = ["*/tests/*", "*/__main__.py"]
